<resources>
    <string name="app_name">EBFitApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contiune">Contiune</string>
    <string name="take_the_first_step_towards_a_healthy_life_join_us_to_reach_your_goals">Take the first step towards a healthy life. Join us to reach your goals!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goal">Goals</string>
    <string name="target_weight">Target Weight</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="back_to_sign_up">Back to Sign Up</string>
    <string name="age">Age</string>
    <string name="weightLoss">Weight Loss</string>
    <string name="weightGain">Weight Gain</string>
    <string name="increaseEndurance">Increase Endurance</string>
    <string name="buildMuscleMass">Build Muscle Mass</string>
    <string name="improveFlexibility">Improve Flexibility and Balance</string>
    <string name="please_fill_in_the_empty_fields">Please fill in the empty fields..</string>
    <!--  Welcome Page Layout  -->
    <string name="welcome">Welcome</string>
    <string name="pursue_your_dreams_with_sports_and_determination">Pursue your dreams with sports and determination.</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcomelogin">Login</string>
    <string name="login">Login</string>
    <string name="train_and_live_the_new_experience_of_exercising_at_home">Train and live the new experience of exercising at home</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="buttonlogin">Login</string>
    <string name="or_ncreate_account">or\nCreate Account</string>
    <string name="complete_profile">Complete Profile</string>

    <!-- Bottom Sheet Layout -->
    <string name="please_enter_the_email_of_the_account_for_which_you_want_to_reset_the_password">Please enter the email of the account for which you want to reset the password.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="article">Article</string>
    <string name="remember_me">Remember Me</string>
    <string name="motivation_2">Taking a small step every day leads to big achievements over time.</string>
    <string name="wave_hand">👋</string>
    <string name="streak">Streak</string>
    <string name="count">count</string>
    <string name="calendar">Calendar</string>
    <string name="workout">Workout</string>
    <string name="all">All</string>
    <string name="article_title">Article Title</string>
    <string name="popular_workouts">Popular Workouts</string>
    <string name="best_trainers">Best Trainers</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="trainer_username">Trainer Username</string>
    <string name="specialization">Specialization</string>
    <string name="see_all">See All</string>
    <string name="program_name">Program Name</string>
    <string name="description">Description</string>
    <string name="muscle_name">Muscle Name</string>
    <string name="target">Target</string>
    <string name="equipment">Equipment</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="instructions">Instructions</string>
    <string name="let_s_do_it">Let\'s do it!</string>
    <string name="sets_amp_reps"><![CDATA[Sets & Reps]]></string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="time">Time</string>
    <string name="start">Start</string>

    <!-- Calorie Layout -->
    <string name="sedantary">Sedentary [little or no exercise]</string>
    <string name="light">Light [exercise 1-3 times/week</string>
    <string name="moderat">Moderat [exercise 4-5 times/week]</string>
    <string name="veryActive">Very Active [intense exercise 6-7 times/week</string>
    <string name="extraActive">Extra Active [very intense exercise daily]</string>

    <string name="save">Save</string>
    <string name="personalize_your_training">Personalize Your Training</string>
    <string name="execution_define">Define the perfect exercise routine by adjusting weights and reps to match your fitness goals. Personalize every aspect of your training for optimal results and satisfaction.</string>
    <string name="choose_your_activity_level">Choose your activity level</string>
    <string name="invalid_body_weight_must_be_between_30_and_250kgs">Invalid body weight : must be between 30 and 250kgs</string>
    <string name="type">Type</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="mm_ss">MM:SS</string>
    <string name="break_and_next_set">Break and Next Set</string>

    <string name="finish_workout">Finish Workout</string>
    <string name="zero">0</string>
    <string name="search">Search</string>
    <string name="todo_list_is_empty_for_current_day">Todo List is empty for current day</string>
    <string name="category">Category</string>
    <string name="reading_time">Reading Time</string>
    <string name="no_results_found_according_to_your_search">No results found according to your search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="days">days</string>
    <string name="start_weight">Start Weight</string>
    <string name="differences">Differences</string>
    <string name="_8kg">8KG</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="calculators">Calculators</string>
    <string name="language">Language</string>
</resources>