<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginnnimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/revolutiongothic_extra_bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train_and_live_the_new_experience_of_exercising_at_home"
            android:fontFamily="@font/revolutiongothic_light"
            android:textSize="23sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/revolutiongothic_extra_bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:fontFamily="@font/revolutiongothic_regular"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/revolutiongothic_extra_bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:fontFamily="@font/revolutiongothic_regular"/>


            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/buttonlogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/revolutiongothic_extra_bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/or_ncreate_account"
            android:textSize="18dp"
            android:textColor="@color/white"/>


    </LinearLayout>

</FrameLayout>