<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeFragment"
    android:orientation="vertical"
    android:background="@color/gray">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:alpha="0.3"
        android:src="@drawable/welcomepagee"
        ></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/welcome"
        android:textColor="@color/red"
        android:textSize="50sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pursue_your_dreams_with_sports_and_determination"
            android:fontFamily="@font/revolutiongothic_light"
            android:textSize="23sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            android:textColor="@color/silver"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="100dp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/revolutiongothic_extra_bold"
            android:textSize="24sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="12dp"
            android:text="@string/welcomelogin"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/revolutiongothic_extra_bold"
            android:textSize="24sp"/>





        </LinearLayout>

</FrameLayout>