<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    android:background="@drawable/round_top_16"
    android:backgroundTint="@color/gray"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@drawable/round_6dp_background"
        android:backgroundTint="@color/light_gray"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/personalize_your_training"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/execution_define"
        android:textColor="@color/silver"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_regular"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/sets"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_regular"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/reps"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_regular"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/revolutiongothic_extra_bold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
